--- a/pages/team-detail/index.wxss
+++ b/pages/team-detail/index.wxss
@@ -323,3 +323,17 @@
   line-height: 100rpx;
   padding-left: 35rpx;
 }
+
+.row-invite {
+  border-top: 40rpx solid #f4f4f4;
+  text-align: center;
+  font-family:PingFangSC-Medium;
+  font-size:38rpx;
+  color:#ff6700;
+  letter-spacing:0;
+  text-align:center;
+  background-color: #fff;
+  height: 100rpx;
+  line-height: 100rpx;
+  vertical-align: middle;
+}
