--- a/pages/project-detail/index.wxss
+++ b/pages/project-detail/index.wxss
@@ -201,10 +201,12 @@ page {
   line-height: 60rpx !important;
 }
 .skills-box .select-down {
+  margin-top: 10rpx;
   width: 18rpx;
   height: 32rpx;
 }
 .skills-box .select-up {
+  margin-top: 10rpx;
   width: 32rpx;
   height: 18rpx;
 }
