--- a/pages/project-detail/index.wxml
+++ b/pages/project-detail/index.wxml
@@ -104,4 +104,4 @@
   </block>
 </view>
 
-<view class="switch-role" bindtap="proposal" wx:if="{{role === 'c' || role === '' || role === 't'}}">投标</view>
+<view class="switch-role" bindtap="proposal" wx:if="{{role === 'f' || role === '' || role === 't'}}">投标</view>
