--- a/pages/proposal/index.wxss
+++ b/pages/proposal/index.wxss
@@ -14,7 +14,7 @@ view {
 }
 
 .first-box {
-    border-bottom: 2px solid #f4f4f4;
+    border-bottom: 2rpx solid #f4f4f4;
     display: flex;
     background: #fff;
     padding: 29rpx 19rpx;
@@ -55,7 +55,7 @@ view {
 }
 
 .third-box {
-    margin-top: 40rpx;
+    margin-top: 20rpx;
     background: #fff;
     padding: 29rpx 19rpx;
     line-height: 26px;
