--- a/pages/proposal/index.wxss
+++ b/pages/proposal/index.wxss
@@ -65,17 +65,31 @@ view {
 }
 
 .switch-role {
-  background-color:#fff;
-  line-height:100rpx;
-  text-align:center;
-  font-size:34rpx;
-  color:#ff6700;
-  margin-top:40rpx;
-  border-top: 2rpx solid #e2e2e9;
-  position: fixed;
-  bottom:0;
-  left: 0;
-  right: 0;
+    background-color:#fff;
+    line-height:100rpx;
+    text-align:center;
+    font-size:34rpx;
+    color:#ff6700;
+    margin-top:40rpx;
+    border-top: 2rpx solid #e2e2e9;
+    position: fixed;
+    bottom:0;
+    left: 0;
+    right: 0;
+}
+
+.switch-disable {
+    background-color:#e2e2e2;
+    line-height:100rpx;
+    text-align:center;
+    font-size:34rpx;
+    color:#9e9e9e;
+    margin-top:40rpx;
+    border-top: 2rpx solid #e2e2e9;
+    position: fixed;
+    bottom:0;
+    left: 0;
+    right: 0;
 }
 
 picker {
