--- a/pages/project-detail/index.wxml
+++ b/pages/project-detail/index.wxml
@@ -125,4 +125,4 @@
   </block>
 </view>
 
-<view class="switch-role" bindtap="proposal" wx:if="{{role === 'f' || role === ''}}">投标</view>
+<view class="switch-role" bindtap="proposal" wx:if="{{role !== 'c'}}">投标</view>
