--- a/pages/signin/index.wxml
+++ b/pages/signin/index.wxml
@@ -4,10 +4,10 @@
 <view class="signin-container">
     <template is="alertTpl" data="{{...alertData}}" />
     <view class="section">
-      <input placeholder="请输入手机号/用户名/邮箱" bindblur="getUsername" placeholder-class="sign-placeholder" focus="" />
+      <input placeholder="请输入手机号/用户名/邮箱" bindinput="test" bindblur="getUsername" placeholder-class="sign-placeholder" focus="" />
     </view>
     <view class="section" wx:if="{{hide}}">
-      <input value="{{password}}" type="password" placeholder="请输入密码" bindblur="getPassword" placeholder-class="sign-placeholder" class="signin-password"/>
+      <input value="{{password}}" type="password" bindinput="test" placeholder="请输入密码" bindblur="getPassword" placeholder-class="sign-placeholder" class="signin-password"/>
       <image class="icon-eye-hide" src="images/password.png" bindtap="change" />
     </view>
     <view class="section" wx:else>
@@ -15,7 +15,6 @@
       <image class="icon-eye" src="images/password-show.png" bindtap="change" />
     </view>
     <view class="btn-signin">
-      <button wx:if="{{password && username}}" type="button" bindtap="signin">登录</button>
-      <button wx:else class="disabled" type="button" bindtap="signin">登录</button>
+      <button type="button" bindtap="signin">登录</button>
     </view>
 </view>
