--- a/pages/signin/index.wxss
+++ b/pages/signin/index.wxss
@@ -35,7 +35,7 @@ input:last-child {
   line-height: 100rpx;
   box-sizing: border-box;
 }
-.btn-signin .disbaled {
+.btn-signin .disabled {
   background-color: #e2e2e2;
   color: #9e9e9e;
   border: 0;
