--- a/pages/freelancer-detail/index.wxss
+++ b/pages/freelancer-detail/index.wxss
@@ -2,6 +2,7 @@ page {
   display: block;
   min-height: 100%;
   background-color: #EFEFF4;
+  padding-bottom: 140rpx;
 }
 .user-container {
   margin: 0
@@ -282,5 +283,9 @@ page {
   height: 100rpx;
   line-height: 100rpx;
   vertical-align: middle;
-  border-top: 40rpx solid #f4f4f4;
+  position: fixed;
+  bottom: 0;
+  width:100%;
+  display: block;
+  border-top: 2rpx solid #e2e2e9;
 }
