--- a/pages/project-detail/index.wxml
+++ b/pages/project-detail/index.wxml
@@ -1,120 +1,121 @@
 <!--index.wxml-->
-<view class="project-details">
-  <p class="job-name">{{job.name}}</p>
-  <block wx:if="{{job.paymethod=='hour'}}">
-    <view class="job-method">
-      <p class="job-price">按小时付费</p>
-      <p class="job-create">{{job.publish_at}}</p>
-    </view>
-    <view class="work-box">
-      <span class="arrow-icon"></span>
-      <p>工作级别:<span>{{job.level}} {{job.hourPrice}}</span></p>
-      <p>工作周期:<span>{{job.duration}}，{{job.workload}}</span></p>
-    </view>
-  </block>
-  <block wx:if="{{job.paymethod=='fixed'}}">
-    <view class="job-method">
-      <p class="job-price">￥{{job.budget}}</p>
-      <p class="job-create">{{job.publish_at}}</p>
-    </view>
-  </block>
-</view>
-
-<view class="job-company">
-  <image src="{{job.team.avatar}}" class="avatar"/>
-  <div class="company-score">
-    <p>{{job.team.name}}<i>(需求方)</i></p>
-  </div>
-</view>
-
-
-<view class="job-info">
-  <ul>
-    <li wx:if="job.category">
-      <image class="icon" src="http://static.clouderwork.com/m-test/dist/img/type_icon.png"/>
-      <label>类型：</label>
-      {{job.category.name}}
-    </li>
-    <li>
-      <image class="icon" src="http://static.clouderwork.com/m-test/dist/img/people_icon.png"/>
-      <label>招聘：</label>
-      {{job.hires}}人
-    </li>
-  </ul>
-</view>
-
-<view class="job-info mr-top">
-  <ul>
-    <li>
-      <label>报名人数：</label>{{job.proposal.proposal}}人
-    </li>
-    <li>
-      <label>面试：</label>{{job.proposal.interview}}人
-    </li>
-    <li>
-      <label>最近一次查看时间：</label><time>{{job.last_view_time}}</time>
-    </li>
-  </ul>
-</view>
-
-<view class="job-description">
-  <ul class="nav">
-    <li bindtap="changePanel" data-panel="base" class="{{panel==='base'?'active':''}}">项目描述</li>
-    <li bindtap="changePanel" data-panel="more" class="{{panel==='more'?'active':''}}">更多信息</li>
-  </ul>
-  <view wx:if="{{panel==='base'}}" class="description">
-    <import src="../../wxParse/wxParse.wxml"/>
-    <template is="wxParse" data="{{wxParseData:article.nodes}}"/>
+<view class="project-container{{role !== 'c'?'':' no-btn'}}">
+  <view class="project-details">
+    <p class="job-name">{{job.name}}</p>
+    <block wx:if="{{job.paymethod=='hour'}}">
+      <view class="job-method">
+        <p class="job-price">按小时付费</p>
+        <p class="job-create">{{job.publish_at}}</p>
+      </view>
+      <view class="work-box">
+        <span class="arrow-icon"></span>
+        <p>工作级别:<span>{{job.level}} {{job.hourPrice}}</span></p>
+        <p>工作周期:<span>{{job.duration}}，{{job.workload}}</span></p>
+      </view>
+    </block>
+    <block wx:if="{{job.paymethod=='fixed'}}">
+      <view class="job-method">
+        <p class="job-price">￥{{job.budget}}</p>
+        <p class="job-create">{{job.publish_at}}</p>
+      </view>
+    </block>
   </view>
-  <block wx:if="{{panel==='more'}}">
-    <ul class="panel-more">
-      <li wx:if="{{job.stage}}">
-        <p class="list-name">项目阶段：</p>
-        <p class="text">{{job.stage}}</p>
+
+  <view class="job-company">
+    <image src="{{job.team.avatar}}" class="avatar"/>
+    <div class="company-score">
+      <p>{{job.team.name}}<i>(需求方)</i></p>
+    </div>
+  </view>
+
+
+  <view class="job-info">
+    <ul>
+      <li wx:if="job.category">
+        <image class="icon" src="http://static.clouderwork.com/m-test/dist/img/type_icon.png"/>
+        <label>类型：</label>
+        {{job.category.name}}
       </li>
-      <li wx:if="{{job.languages.length}}" class="skills-box" bindtap="skillOperation" data-languageShow="{{languageShow}}">
-        <p class="list-name">必掌握语言：</p>
-
-        <p wx:if="{{languageShow}}" class="show-all skills"><span wx:for="{{job.languages}}" wx:key="*this" wx:for-item="item">{{item}}</span></p>
-
-        <p wx:else class="skills"><span wx:for="{{job.languages}}" wx:key="*this" wx:for-item="item">{{item}}</span></p>
-
-        <image wx:if="{{languageShow}}" wx:if="{{!skillShow}}" src="./images/up.png" class="select-down"/>
-
-        <image wx:else src="./images/down.png" class="select-up"/>
-      </li>
-      <li wx:if="{{job.platforms.length}}">
-        <p class="list-name">应用平台：</p>
-        <p class="text"><span wx:for="{{job.platforms}}" wx:key="*this" wx:for-item="item">{{item}}</span></p>
-      </li>
-      <li wx:if="{{job.frameworks.length}}" class="skills-box" bindtap="frameOperation" data-frameworkShow="{{frameworkShow}}">
-        <p class="list-name">喜欢的框架：</p>
-
-        <p wx:if="{{frameworkShow}}" class="show-all skills"><span wx:for="{{job.frameworks}}" wx:key="*this" wx:for-item="item">{{item}}</span></p>
-
-        <p wx:else class="skills"><span wx:for="{{job.frameworks}}" wx:key="*this" wx:for-item="item">{{item}}</span></p>
-
-        <image wx:if="{{!frameworkShow}}" src="./images/up.png" class="select-down"/>
-
-        <image wx:else src="./images/down.png" class="select-up"/>
-      </li>
-      <li wx:if="{{job.api.length}}">
-        <p class="list-name">API要求：</p>
-        <p class="text" ><span wx:for="{{job.api}}" wx:key="*this" wx:for-item="item">{{item}}</span></p>
-      </li>
-      <li wx:if="{{job.skills.length}}" class="skills-box" bindtap="skillOperation">
-        <p class="list-name">其他技能：</p>
-
-        <p wx:if="{{skillShow}}" class="show-all skills"><span wx:for="{{job.skills}}" wx:key="*this" wx:for-item="skill">{{skill}}</span></p>
-
-        <p wx:else class="skills"><span wx:for="{{job.skills}}" wx:key="*this" wx:for-item="skill">{{skill}}</span></p>
-
-        <image wx:if="{{skillShow}}" src="./images/down.png" class="select-up"/>
-
-        <image wx:else src="./images/up.png" class="select-down"/>
+      <li>
+        <image class="icon" src="http://static.clouderwork.com/m-test/dist/img/people_icon.png"/>
+        <label>招聘：</label>
+        {{job.hires}}人
       </li>
     </ul>
-  </block>
-</view>
+  </view>
 
-<view class="switch-role" bindtap="proposal" wx:if="{{role !== 'c'}}">投标</view>
+  <view class="job-info mr-top">
+    <ul>
+      <li>
+        <label>报名人数：</label>{{job.proposal.proposal}}人
+      </li>
+      <li>
+        <label>面试：</label>{{job.proposal.interview}}人
+      </li>
+      <li>
+        <label>最近一次查看时间：</label><time>{{job.last_view_time}}</time>
+      </li>
+    </ul>
+  </view>
+
+  <view class="job-description">
+    <ul class="nav">
+      <li bindtap="changePanel" data-panel="base" class="{{panel==='base'?'active':''}}">项目描述</li>
+      <li bindtap="changePanel" data-panel="more" class="{{panel==='more'?'active':''}}">更多信息</li>
+    </ul>
+    <view wx:if="{{panel==='base'}}" class="description">
+      <import src="../../wxParse/wxParse.wxml"/>
+      <template is="wxParse" data="{{wxParseData:article.nodes}}"/>
+    </view>
+    <block wx:if="{{panel==='more'}}">
+      <ul class="panel-more">
+        <li wx:if="{{job.stage}}">
+          <p class="list-name">项目阶段：</p>
+          <p class="text">{{job.stage}}</p>
+        </li>
+        <li wx:if="{{job.languages.length}}" class="skills-box" bindtap="skillOperation" data-languageShow="{{languageShow}}">
+          <p class="list-name">必掌握语言：</p>
+
+          <p wx:if="{{languageShow}}" class="show-all skills"><span wx:for="{{job.languages}}" wx:key="*this" wx:for-item="item">{{item}}</span></p>
+
+          <p wx:else class="skills"><span wx:for="{{job.languages}}" wx:key="*this" wx:for-item="item">{{item}}</span></p>
+
+          <image wx:if="{{languageShow}}" wx:if="{{!skillShow}}" src="./images/up.png" class="select-down"/>
+
+          <image wx:else src="./images/down.png" class="select-up"/>
+        </li>
+        <li wx:if="{{job.platforms.length}}">
+          <p class="list-name">应用平台：</p>
+          <p class="text"><span wx:for="{{job.platforms}}" wx:key="*this" wx:for-item="item">{{item}}</span></p>
+        </li>
+        <li wx:if="{{job.frameworks.length}}" class="skills-box" bindtap="frameOperation" data-frameworkShow="{{frameworkShow}}">
+          <p class="list-name">喜欢的框架：</p>
+
+          <p wx:if="{{frameworkShow}}" class="show-all skills"><span wx:for="{{job.frameworks}}" wx:key="*this" wx:for-item="item">{{item}}</span></p>
+
+          <p wx:else class="skills"><span wx:for="{{job.frameworks}}" wx:key="*this" wx:for-item="item">{{item}}</span></p>
+
+          <image wx:if="{{!frameworkShow}}" src="./images/up.png" class="select-down"/>
+
+          <image wx:else src="./images/down.png" class="select-up"/>
+        </li>
+        <li wx:if="{{job.api.length}}">
+          <p class="list-name">API要求：</p>
+          <p class="text" ><span wx:for="{{job.api}}" wx:key="*this" wx:for-item="item">{{item}}</span></p>
+        </li>
+        <li wx:if="{{job.skills.length}}" class="skills-box" bindtap="skillOperation">
+          <p class="list-name">其他技能：</p>
+
+          <p wx:if="{{skillShow}}" class="show-all skills"><span wx:for="{{job.skills}}" wx:key="*this" wx:for-item="skill">{{skill}}</span></p>
+
+          <p wx:else class="skills"><span wx:for="{{job.skills}}" wx:key="*this" wx:for-item="skill">{{skill}}</span></p>
+
+          <image wx:if="{{skillShow}}" src="./images/down.png" class="select-up"/>
+
+          <image wx:else src="./images/up.png" class="select-down"/>
+        </li>
+      </ul>
+    </block>
+  </view>
+  <view class="switch-role" bindtap="proposal" wx:if="{{role !== 'c'}}">投标</view>
+</view>
