--- a/pages/signin/index.wxml
+++ b/pages/signin/index.wxml
@@ -1,6 +1,7 @@
 <!--index.wxml-->
 <import src="../../components/project-item.wxml"/>
 <import src="../../components/alert.wxml"/>
+<import src="../../components/tab-bar.wxml"/>
 <view class="signin-container">
     <template is="alertTpl" data="{{...alertData}}" />
     <view class="section">
@@ -20,4 +21,5 @@
     <view class="btn-signin">
       <button type="button" bindtap="signin">登录</button>
     </view>
+    <template is="tabBar" />
 </view>
