--- a/components/alert.wxml
+++ b/components/alert.wxml
@@ -5,7 +5,8 @@
   <view wx:if="{{msg}}" id="alertWeek" class="week-alert" >
       <view class="week-mask_transparent"></view>
       <view class="week-toast">
-          <icon class="icon_toast" type="warn" size="35" color="red"/>
+          <image class="icon_toast" src="../../images/icon-error.png" />
+          <!-- <icon class="icon_toast" type="clear" size="35"/> -->
           <p class="week-toast__content">{{msg}}</p>
       </view>
   </view>
