--- a/pages/project-detail/index.wxml
+++ b/pages/project-detail/index.wxml
@@ -73,28 +73,28 @@
           <p class="list-name">项目阶段：</p>
           <p class="text">{{job.stage}}</p>
         </li>
-        <li wx:if="{{job.languages.length}}" class="skills-box">
-          <p class="list-name">必掌握语言：</p>
+        <li wx:if="{{job.skills.length}}" class="skills-box">
+          <p class="list-name">所需技能：</p>
 
-          <p class="skills"><span wx:for="{{job.languages}}" wx:key="*this" wx:for-item="item">{{item}}</span></p>
+          <p class="skills"><span wx:for="{{job.skills}}" wx:key="*this" wx:for-item="skill">{{skill}}</span></p>
         </li>
         <li wx:if="{{job.platforms.length}}">
           <p class="list-name">应用平台：</p>
           <p class="text"><span wx:for="{{job.platforms}}" wx:key="*this" wx:for-item="item">{{item}}</span></p>
         </li>
         <li wx:if="{{job.frameworks.length}}" class="skills-box">
-          <p class="list-name">喜欢的框架：</p>
+          <p class="list-name">开发框架：</p>
 
           <p class="skills"><span wx:for="{{job.frameworks}}" wx:key="*this" wx:for-item="item">{{item}}</span></p>
         </li>
         <li wx:if="{{job.api.length}}">
-          <p class="list-name">API要求：</p>
+          <p class="list-name">集成API：</p>
           <p class="text" ><span wx:for="{{job.api}}" wx:key="*this" wx:for-item="item">{{item}}</span></p>
         </li>
-        <li wx:if="{{job.skills.length}}" class="skills-box">
-          <p class="list-name">其他技能：</p>
+        <li wx:if="{{job.languages.length}}" class="skills-box">
+          <p class="list-name">开发语言：</p>
 
-          <p class="skills"><span wx:for="{{job.skills}}" wx:key="*this" wx:for-item="skill">{{skill}}</span></p>
+          <p class="skills"><span wx:for="{{job.languages}}" wx:key="*this" wx:for-item="item">{{item}}</span></p>
         </li>
       </ul>
     </block>
