--- a/pages/register/index.wxss
+++ b/pages/register/index.wxss
@@ -11,9 +11,13 @@ page {
   padding: 24rpx 30rpx;
   background: #fff;
   display: flex;
+  position: relative;
 }
 .section:last-child {
   border-bottom: none;
+}
+.signin-container .in-password {
+  margin-top: 20rpx;
 }
 input {
   font-size: 30rpx;
@@ -34,6 +38,26 @@ input:last-child {
   height: 100rpx;
   line-height: 100rpx;
   box-sizing: border-box;
+}
+.send-code {
+  width: 180rpx;
+  height: 70rpx;
+  line-height: 70rpx;
+  display: block;
+  text-align: center;
+  border:2rpx solid #ff6700;
+  border-radius: 10rpx;
+  box-sizing: border-box;
+  font-size: 26rpx;
+  color: #ff6700;
+  position: absolute;
+  top: 15rpx;
+  right: 26rpx;
+}
+.no-send-btn {
+  background-color: #e2e2e2;
+  color: #9e9e9e;
+  border: 2rpx solid #e2e2e2;
 }
 .btn-signin .disabled {
   background-color: #e2e2e2;
@@ -61,6 +85,9 @@ button::after {
   width: 36rpx;
   height: 36rpx;
   margin-top:8rpx;
+}
+.del-phone-icon {
+  margin-right: 185rpx;
 }
 .common-bar {
   height: 115rpx;
