--- a/app.wxss
+++ b/app.wxss
@@ -26,7 +26,8 @@
   min-height:243rpx;
   top:180px;
   left:50%;
-  margin-left:-200rpx;
+  margin-left:-172rpx;
+  margin-top: -121rpx;
   background:rgba(48, 48, 48, 0.7);
   text-align:center;
   border-radius:5px;
@@ -36,8 +37,8 @@
 }
 
 .icon_toast {
-  margin: 52rpx 130rpx 28rpx;
-  display: inline-block;
+  margin: 22rpx auto 27rpx;
+  display: block;
   width: 75rpx;
   height:75rpx;
 }
@@ -50,4 +51,5 @@
   color:#fff;
   letter-spacing:0.63px;
   text-align:left;
+  line-height: 34rpx;
 }
